# EY_square_city_app

./: .gitignore  README.md  requirements.txt
ey_square_city_app/: pyproject.toml
ey_square_city_app/ey_square_city_app/: main.py
front-demos-login/: login-app.kv  login-app.py
src/: main.py
src/back/: map.py
src/front/: main.py
src/front_kivy/: map.py  map2.kv  map2.py
src/real_front/: geo.kv  main.py
src/test_notebooks/: alina_test.ipynb  coder.ipynb  firebase.ipynb  map.html  matt_coder.ipynb
tmp/: main.py
