[tool.poetry]
name = "ey-square-city-app"
version = "0.1.0"
description = ""
authors = ["MatteoR <matteorocco9@gmail.com>"]
readme = "README.md"
packages = [{include = "ey_square_city_app"}]

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
